# Computer-Vision-Labs

./: .gitignore
lab 1/: CMakeLists.txt
lab 1/task1/: task1.cpp
lab 1/task2/: task2.cpp
lab 1/task3/: removeColors.cpp  removeColors.h  task3.cpp
lab 1/task4/: oneColor.cpp  oneColor.h  task4.cpp
lab 1/task5/: black_white.cpp  black_white.h  task5.cpp
lab 2/tasks/: CMakeLists.txt  Lab report 2.docx
lab 2/tasks/CV-LabReport2-PooyaNasiri/Task1/: task1.cpp
lab 2/tasks/CV-LabReport2-PooyaNasiri/Task2/: ImageFilters.h  task2.cpp
lab 2/tasks/CV-LabReport2-PooyaNasiri/Task3/: ImageFilters.cpp  task3.cpp
lab 2/tasks/CV-LabReport2-PooyaNasiri/Task4/: task4.cpp
lab 2/tasks/CV-LabReport2-PooyaNasiri/Task6/: plot_histogram.h
lab 2/tasks/Task1/: task1.cpp
lab 2/tasks/Task2/: ImageFilters.cpp
lab 2/tasks/Task3/: ImageFilters.h
lab 2/tasks/Task5/: task5.cpp
lab 2/tasks/Task6/: plot_histogram.cpp  task6.cpp
lab 3/: Lab report 3.docx
lab 3/CV-Report3-PooyaNasiri/task1/: task1.cpp
lab 3/CV-Report3-PooyaNasiri/task2/: BGR.cpp  BGR.h  mouse_callback.cpp  mouse_callback.h  task2.cpp
lab 3/CV-Report3-PooyaNasiri/task3/: mouse_callback.cpp  task3.cpp
lab 3/CV-Report3-PooyaNasiri/task4/: BGR.h  mask.cpp  mouse_callback.cpp  task4.cpp
lab 3/CV-Report3-PooyaNasiri/task5/: mask.cpp  mask.h  task5.cpp
lab 3/CV-Report3-PooyaNasiri/task6/: BGR.cpp  mask.cpp  mask.h  mouse_callback.cpp  task6.cpp
lab 4/CV-Report4-PooyaNasiri/task1/: task1.cpp
lab 4/CV-Report4-PooyaNasiri/task2/: headers.h  task2.cpp
lab 4/CV-Report4-PooyaNasiri/task3/: detect_street.cpp  task3.cpp
lab 4/CV-Report4-PooyaNasiri/task4/: task4.cpp
lab 4/task3/: detect_street.h
lab 4/task4/: circle.cpp  circle.h
lab 5/: Lab report 5.docx
lab 5/tasks/: CMakeLists.txt  headers.h  segmenter.cpp  segmenter.h  task1.cpp  task2.cpp  task3.cpp
lab 6/task/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  headers.h  imageMatcher.cpp  imageMatcher.h  task.cpp
lab 7/: Lab report 7.docx
lab 7/task/: panoramic_utils.cpp  panoramic_utils.h  task.cpp
lab 8/task/: CMakeLists.txt  task.cpp
